# adaptive_matb_2026

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyrightconfig.json  setup_pilot_instructions.py
.github/: copilot-instructions.md
config/: eeg_feature_extraction.yaml  eeg_metadata.yaml  participant_assignments.yaml  paths.example.yaml  pretrain_qc.yaml
docs/: DATA_MANAGEMENT.md  PARTICIPANT_ASSIGNMENTS.md  PILOT_READINESS_CHECKLIST_v0.md  REPO_RULES.md  SESSION_CHEAT_SHEET.md  STYLEGUIDE.md  WORKFLOW.md  eeg_mwl_label_contract_v0.md  mwl_eeg_input_contract.md  pre_merge_logging_verification.md  run_logging_verification.md  two_run_no_overwrite_verification.md
experiment/: README.md
instructions/: 1_welcome.txt  2_sysmon.txt  3_track.txt  4_comm.txt  5_resman.txt  6_all_tasks.txt
results/: 25hz_sweep_all_xdfs.csv  bandpower_out.txt  cal_block_sweep_PSELF.csv  cal_block_sweep_PSELF_summary.csv  cal_block_sweep_PSELF_v2.csv  cal_block_sweep_PSELF_v2_summary.csv  cal_block_sweep_PSELF_v3.csv  cal_block_sweep_PSELF_v3_summary.csv  ml_calibration_summary.csv  ml_cohort_confusion_matrix.json  qc_audit.csv
scenarios/: adaptation_skeleton.txt  pilot_calibration_high.txt  pilot_calibration_low.txt  pilot_calibration_moderate.txt  pilot_practice_high.txt  pilot_practice_intro.txt  pilot_practice_low.txt  pilot_practice_moderate.txt  pilot_static_high.txt  pilot_static_low.txt  pilot_static_moderate.txt
scripts/: _check_eeg_channels.py  _smoke_test_eegnet.py  _tmp_10fold_threshold_s006.py  _tmp_adapt_perrun_s006.py  _tmp_anchor_design.py  _tmp_c1_timing.py  (+49 more)
(+358 files in other folders)
