[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive_matb"
version = "0.1.0"
description = "Adaptive MATB 2026 — PhD research experiment and analysis package"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "torch",
    "h5py",
    "pyxdf",
    "pyyaml",
    "pylsl",
    "pyserial",
    "scipy",
    "mne",
]

[tool.hatch.build.targets.wheel]
# Post-migration layout: source packages live directly under src/
packages = ["src/adaptation", "src/eeg", "src/ml", "src/performance"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
# Updated to src/ after flattening src/python/ in refactor/repo-structure
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Makes pytest resolve package imports from src/ without sys.path manipulation
pythonpath = ["src"]
